# Ouroboros-SYCL

./: .gitignore  CMakeLists.txt  Doxyfile  batch-times.sh
include/: Definitions.h  InstanceDefinitions.dp.hpp  Parameters.h  PerformanceMeasure.dp.hpp  Statistics.h  Utility.cuh  Utility.dp.hpp  Utility.dp.hpp.yaml  Utility.h
include/device/: BulkSemaphore.dp.hpp  BulkSemaphore_impl.cuh  BulkSemaphore_impl.dp.hpp  Chunk.dp.hpp  ChunkAccess.dp.hpp  ChunkAccess_impl.dp.hpp  ChunkIndexChunk.dp.hpp  ChunkLocator.dp.hpp  CudaUniquePtr.dp.hpp  Helper.dp.hpp  MemoryIndex.dp.hpp  MemoryInitialization.dp.hpp  MemoryQueries.dp.hpp  Ouroboros.dp.hpp  Ouroboros_impl.dp.hpp  PageIndexChunk.dp.hpp
include/device/queues/: Queue.h  Queue.h.yaml  QueueChunk.dp.hpp  QueueChunk.dp.hpp.yaml  QueueChunk_impl.cuh  QueueChunk_impl.dp.hpp  QueueChunk_impl.dp.hpp.yaml  Queue_impl.dp.hpp  Queue_impl.dp.hpp.yaml  Queues.dp.hpp  Queues_impl.dp.hpp
include/device/queues/chunk/: ChunkQueue.dp.hpp  ChunkQueue.dp.hpp.yaml  ChunkQueueVA.dp.hpp  ChunkQueueVA.dp.hpp.yaml  ChunkQueueVA_impl.dp.hpp  ChunkQueueVA_impl.dp.hpp.yaml  ChunkQueueVL.dp.hpp  ChunkQueueVL.dp.hpp.yaml  ChunkQueueVL_impl.dp.hpp  ChunkQueueVL_impl.dp.hpp.yaml  ChunkQueue_impl.dp.hpp  ChunkQueue_impl.dp.hpp.yaml
include/device/queues/page/: PageQueue.dp.hpp  PageQueue.dp.hpp.yaml  PageQueueVA.dp.hpp  PageQueueVA.dp.hpp.yaml  PageQueueVA_impl.dp.hpp  PageQueueVA_impl.dp.hpp.yaml  PageQueueVL.dp.hpp  PageQueueVL.dp.hpp.yaml  PageQueueVL_impl.dp.hpp  PageQueueVL_impl.dp.hpp.yaml  PageQueue_impl.dp.hpp  PageQueue_impl.dp.hpp.yaml
src/: main.cpp  main.cu
src/dpct_output/: MainSourceFiles.yaml
